Added trivia api endpoint documentation to swagger
